<resources>
    <string name="app_name">My Application</string>
    <string name="client_id">252380724311-5gonosnpqs2g2uruilf6q6rqgv6ear2t.apps.googleusercontent.com</string>

    <!-- Search -->
    <string name="hint_search">Search here…</string>
    <string name="desc_search_icon">Search icon</string>

    <!-- Tags -->
    <string name="tag_iconic">★ Iconic</string>
    <string name="tag_cuisine">🍴 Cuisine</string>
    <string name="tag_entertaining">👜 Entertaining</string>
    <string name="tag_culture">🏛️ Culture</string>

    <!-- Saved Lists -->
    <string name="desc_list_icon">List icon</string>
    <string name="desc_menu_icon">Menu icon</string>
    <string name="saved_title">Saved</string>
    <string name="new_list">New list</string>

    <!-- Reviews -->
    <string name="hint_review_search">Search review by author</string>
    <string name="tag_most_approved">Most approved</string>
    <string name="tag_newest">Newest</string>
    <string name="tag_highest_rate">Highest rate</string>
    <string name="tag_lowest_rate">Lowest rate</string>
    <string name = "review_text_sample">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea kahdsbjasbchak</string>

</resources>